--- a/assets/css/templatemo-chain-app-dev.css
+++ b/assets/css/templatemo-chain-app-dev.css
@@ -1905,7 +1905,6 @@ a.btn_red {
 
 .social_login .icon {
   display: inline-block;
-  
   padding: 5px 10px;
   margin-right: 10px;
   float: left;
@@ -2055,6 +2054,10 @@ responsive
 
 @media (max-width: 1200px) {
 
+  .main-banner .right-image img {
+    display: none;
+}
+
   .google-form {
     width: 650px;
     height: 1150px;
@@ -2083,7 +2086,7 @@ responsive
     text-transform: capitalize;
     font-size: 19px;
     background-color: #fff;
-    margin-left: 144px;
+    margin-left: -14px;
     margin-top: 9px;
     border-radius: 23px;
     font-weight: 500 !important;
